@@ -35,8 +35,8 @@ project(VMC)
 
 #--- Project version -----------------------------------------------------------
 #include(VMCVersion)
-set(${PROJECT_NAME}_VERSION_MAJOR "0")
-set(${PROJECT_NAME}_VERSION_MINOR "1")
+set(${PROJECT_NAME}_VERSION_MAJOR "1")
+set(${PROJECT_NAME}_VERSION_MINOR "0")
 set(${PROJECT_NAME}_VERSION_PATCH "0")
 set(${PROJECT_NAME}_VERSION
     ${${PROJECT_NAME}_VERSION_MAJOR}.${${PROJECT_NAME}_VERSION_MINOR}.${${PROJECT_NAME}_VERSION_PATCH})
